# QEC-Playground

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  Cargo.toml  Makefile  README.md  build.rs  code_builder.rs  decoder_mwpm.rs  decoder_union_find.rs  error_model.rs  lib.rs  pyproject.toml  simulator.rs  test.py  test.sh  test_build.sh  test_check.sh  test_python.sh
.github/workflows/: wheels.yml
articles/: UFandMWPM.md  better_estimation_for_mixed_erasure_and_Pauli_errors.nb  different_decoders.md  erasure_ad_pauli_channel_scaling.nb  logical_error_rate_always_fail_decoder.nb  migration_benchmark.md  xzzx_biased_noise_and_max_half_weight.nb
backend/RustQECP/: Cargo.toml
backend/RustQECP/src/: main.rs  test.rs  util.rs
backend/blossomV/: .gitignore  PMinterface.cpp  PerfectMatching.h  blossomV.cpp  test.c  test.cpp
backend/pyscripts/: decode.py  test.py
backend/python/: .gitignore  MWPM_weighted.py  QECPutil.py  TEST_MWPM.py  TEST_save_load.py  draw_graph.py  test_call_python_from_rust.py  train_weight.py  train_weight_cus.py
backend/rust/: .gitignore  85.joberror  Cargo.toml  build.rs  default_weights.txt  pyproject.toml  read_nohup_out.py  wrong_default_weights.txt
backend/rust/doc/: distributed_uf_decoder_connections_2D_demo.html
backend/rust/pylib/: distributed_union_find_FPGA_generator.py
backend/rust/src/: blossom_v.rs  code_builder.rs  complete_model_graph.rs  decoder_fusion.rs  decoder_mwpm.rs  decoder_tailored_mwpm.rs  decoder_union_find.rs  decoding_graph.rs  distributed_uf_decoder.rs  erasure_graph.rs  error_model.rs  error_model_builder.rs  exhausted_matching_graph.rs  fast_benchmark.rs  fpga_generator.rs  ftqec.rs  lib.rs  main.rs  model_graph.rs  mwpm_approx.rs  mwpm_decoder.rs  offer_decoder.rs  offer_mwpm.rs  qec.rs  reproducible_rand.rs  simulator.rs  tailored_complete_model_graph.rs  tailored_model_graph.rs  tailored_mwpm_decoder.rs  test.rs  tool.rs  types.rs  union_find.rs  union_find_decoder.rs  util.rs  util_macros.rs  verilog_simulator.rs  web.rs
backend/verilated/: blocking_channel.sv  fifo_fwft.v  generated_top_example.sv  neighbor_link.sv  nonblocking_channel.sv  parameters.sv  processing_unit.sv  processing_unit_synthesizable_test.sv  tree_compare_solver.sv  tree_distance_3d_solver.sv
benchmark/: .gitignore  qecp_util.py
benchmark/auto_profiler/: auto_profiler.md  auto_profiler.py  benchmark.py  fault_tolerant_benchmark.py  qecp_profiler.py
benchmark/decoder_threshold/: d_11.txt  d_21.txt  d_3.txt  d_31.txt  d_7.txt  d_9.txt  mwpm_decoder_threshold.gp
benchmark/distributed_uf_decoder/: d_11.txt  d_13.txt  d_3.txt  d_5.txt  d_7.txt  d_9.txt  distributed_uf_decoder.gp
benchmark/fault_tolerant_MWPM/: automated_threshold_evaluation.py  d_11_11.txt  d_13_13.txt  d_3_3.txt  d_5_5.txt  d_7_7.txt  d_9_9.txt  estimate_threshold.py  fault_tolerant_MWPM.gp  slurm_distribute.py
benchmark/maximum_max_weight_matching_decoder/: d_11.txt  d_13.txt  d_3.txt  d_5.txt  d_7.txt  d_9.txt  maximum_max_weight_matching_decoder.gp
benchmark/mwpm_decoder_threshold/: d_5.txt  d_9.txt  mwpm_decoder_threshold.gp
benchmark/noise_models/: README.md
benchmark/offer_algorithm/: d_11.txt  d_13.txt  d_3.txt  d_5.txt  d_7.txt  d_9.txt  offer_algorithm.gp
benchmark/offer_decoder/: d_11.txt  d_13.txt  d_3.txt  d_5.txt  d_7.txt  d_9.txt  offer_decoder.gp
benchmark/paper_splitting_decoder/: README.md  code_capacity_noise.gp  phenomenological_noise.gp
benchmark/python_interface/: README.md  __code_generator.py  benchmarker.py  example.py
benchmark/slurm_utilities/: migration_find_possible_jobout_aggregation.py  slurm_distribute.py  slurm_rerun_failed.py  slurm_try_collect_missing_jobs.py
benchmark/stupid_decoder/: d_11.txt  d_15.txt  d_25.txt  d_3.txt  d_5.txt  d_7.txt  d_9.txt  stupid_decoder.gp
benchmark/threshold_analyzer/: threshold_analyzer.py
benchmark/union_find_decoder/: d_11.txt  d_13.txt  d_3.txt  d_5.txt  d_7.txt  d_9.txt  union_find_decoder.gp
docs/: 404.html  bibliography.html  index.html  print.html  searchindex.js  searchindex.json
docs/guide/: installation.html
documentation/: book.toml
documentation/book/: index.html  searchindex.json
documentation/src/: README.md  SUMMARY.md
frontend/: ErrorModelViewer2D.html  OPA2-MaximumWeightMatching.html  OfferDecoder.html  README.md  package-lock.json  vue.config.js
frontend/OPA2-Video/: README.txt
frontend/reproducible_rand/: README.md  index.ts  index.wasm  index.wat  parse.py
frontend/src/: App.vue  main.js
qecplayground/: ErrorModelViewer2D.html  OPA2-MaximumWeightMatching.html  OPA2-generate-video.py  OfferDecoder.html  package-lock.json  package.json  vue.config.js
qecplayground/OPA2-Video/: .gitignore
qecplayground/public/: index.html
qecplayground/reproducible_rand/: index.wasm.map
qecplayground/src/: App.vue  background.js  main.js
src/: blossom_v.rs  cli.rs  code_builder.rs  complete_model_graph.rs  decoder_fusion.rs  decoder_hyper_union_find.rs  decoder_hyperion.rs  decoder_mwpm.rs  decoder_parallel_fusion.rs  decoder_tailored_mwpm.rs  decoder_union_find.rs  distributed_uf_decoder.rs  erasure_graph.rs  error_model.rs  error_model_builder.rs  helper.py  lib.rs  main.rs  model_graph.rs  model_hypergraph.rs  noise_model.rs  noise_model_builder.rs  reproducible_rand.rs  simulator.rs  simulator_compact.rs  simulator_file.rs  tailored_complete_model_graph.rs  tailored_model_graph.rs  test.rs  tool.rs  types.rs  union_find.rs  util.rs  util_fusion.rs  util_macros.rs  visualize.rs  web.rs
tutorial/: d_11_0.05.txt  d_13_0.05.txt  d_15_0.05.txt  d_3_0.05.txt  d_5_0.05.txt  d_7_0.05.txt  d_9_0.05.txt  max-tree-max-half-weight_3_0.05_1.txt  max-tree-max-half-weight_3_0.05_2.txt  max-tree-max-weight-plot.ipynb  max-tree-size-plot.ipynb  max-tree-tutorial.py
tutorial/.ipynb_checkpoints/: max-tree-max-weight-plot-checkpoint.ipynb  max-tree-size-plot-checkpoint.ipynb  max-tree-tutorial-checkpoint.py
visualize/: NoiseModelViewer2D.html  cmd.js  generate_samples.sh  gui3d.js  index.html  index.js  mocker.js  patches.js  server.py
(+9537 files in other folders)
