[package]
name = "rust_qecp"
version = "0.1.0"
authors = ["Yue Wu <yue.wu@yale.edu>"]
description = "Quantum Error Correction Playground for BIM'20 course"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num_cpus = "1.13.0"
bytes = "0.6.0"
serde_json = "1.0.59"
clap = "2.33.3"
