[package]
name = "rust_qecp"
version = "0.1.0"
authors = ["Yue Wu <yue.wu@yale.edu>"]
description = "Quantum Error Correction Playground for BIM'20 course"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
noserver = []  # ignore parts with actix-web to speed up compilation

[dependencies]
rand = "0.7.3"
num_cpus = "1.13.0"
bytes = "0.6.0"
serde = "1.0.117"
serde_json = "1.0.59"
clap = "2.33.3"
ndarray = "0.13.1"
actix-web = "3.3.0"
actix-cors = "0.5.3"
pyo3 = "0.12.4"
libc = "0.2.81"
